--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img alt="sorry........ " src="./searchIcon.jpg" id="searchIcon">
+    <img alt="Oh, Sorry........ " src="./searchIcon.jpg" id="searchIcon">
     <script src="bundle.js"></script>
 </body>
 </html>
